listings/ch07-managing-growing-projects/listing-07-12/output.txt
$ cargo build
   Compiling ristorante v0.1.0 (file://progetti/ristorante)
error[E0433]: failed to resolve: use of undeclared crate or module `accoglienza`
  --> src/lib.rs:11:9
   |
11 |         accoglienza::aggiungi_in_lista();
   |         ^^^^^^^^^^^ use of undeclared crate or module `accoglienza`
   |
help: consider importing this module through its public re-export
   |
10 +     use crate::accoglienza;
   |

warning: unused import: `crate::sala::accoglienza`
 --> src/lib.rs:7:5
  |
7 | use crate::sala::accoglienza;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

For more information about this error, try `rustc --explain E0433`.
warning: `ristorante` (lib) generated 1 warning
error: could not compile `ristorante` (lib) due to 1 previous error; 1 warning emitted
